# moxiebox

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  README.md  TODO  configure.ac  demo.cc  demo.h  elf.cc  execution-env.md  interp.c  interp.cc  machine.cc  moxie.cc  sandbox.cc  sandbox.h  util.cc
contrib/: build-moxiebox-tools.sh  config.sub-moxiebox.patch  download-tools-sources.sh
runtime/: .gitignore  Makefile.am  crt0.S  make.sh  memchr.c  memcmp.c  memcpy.c  memmap.c  memset.c  sandboxrt.h  sandboxrt_crypto.h  setreturn.S  sha256.c  str-two-way.h  strchr.c  strcmp.c  strcpy.c  strlen.c  strncpy.c  strstr.c  sys-_exit.S  sys-exit.S  sys-mmap.S  test1.c
src/: .gitignore  Makefile.am  elf.cc  gen-sum.cc  moxie.cc  moxie.h  sandbox.cc  sandbox.h  util.cc
tests/: .gitignore  Makefile.am  exit0.c  exit1.c  memset.c  random.data  random.data.sum  rtlib-test.c  run-basic.sh  run-exit.sh  run-rtlib.sh  run-sha256.sh  sha256-test.c  sha256.c  strstr.c
